# vendor-cleanup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
examples/: sample-campaign.yaml
registry/: SUMMARY.md  williamdes-cleanup-prs.yaml
src/: build.rs  checks.rs  config.rs  github.rs  main.rs  pr.rs  savings.rs  style.rs
tests/: style_apply.rs
